--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       name="description"
       content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- TODO: Add favicon, og:image, theme-color -->
 
@@ -42,135 +42,145 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <meta property="og:url" , content="https://studioeb.github.io/" />
     <meta property="og:type" , content="website" />
     <meta property="og:locale" , content="en-US" />
+
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
 
   <body>
-    <header>
-      <h1>Ethan Bayer</h1>
-    </header>
+    <div class="sidebar">
+      <header>
+        <h1><a href="">Ethan Bayer</a></h1>
+      </header>
 
-    <nav>
-      <ul>
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
-    <main>
-      <section id="about-me">
-        <h2>About Me</h2>
-        <p>
-          Hi, I'm Ethan Bayer. I'm a developer and independent musician
-          interested in technology of all sorts as well as songwriting and music
-          production.
-        </p>
-      </section>
-
-      <section id="portfolio">
-        <h2>Portfolio</h2>
-        <section>
-          <h3>Technology</h3>
-
-          <article>
-            <h4>Conditional Switch</h4>
-            <p>
-              Conditional Switch is a video game made using the Unity game
-              engine as well as C# for scripting. In total it took me a few
-              months to finish, and you can play it in your browser or download
-              the game for Windows and MacOS.
-            </p>
-          </article>
-
-          <article>
-            <h4>Personal Website</h4>
-            <p>
-              I made this website, my personal portfolio, from scratch with HTML
-              and CSS, which I learned over the course of a month thanks to the
-              <a href="https://developer.mozilla.org">MDN Web Docs</a>.
-            </p>
-          </article>
-
-          <article>
-            <h4>AutoCompressors</h4>
-            <p>
-              AutoCompressors is a Spigot plugin for the video game Minecraft,
-              adding new functionality in the form of easily customizable items
-              that, when in your inventory, can automatically convert specific
-              items into other ones.
-            </p>
-          </article>
-
-          <article id="ender-3">
-            <h4>Ender-3</h4>
-            <p>
-              Over the course of a few years, I have heavily modified what
-              originally was a Creality Ender-3 3D printer with both
-              modifications developed by the incredible community around this
-              printer as well as some of my own ideas and designs.
-            </p>
-          </article>
-
-          <article>
-            <h4>3D Design</h4>
-            <p>
-              So far, I have designed and published six simple and useful 3D
-              models to solve problems I had. I used Fusion for the designs and
-              3D printed them on my <a href="#ender-3">Ender-3</a>.
-            </p>
-          </article>
-
-          <article>
-            <h4>Calculator Pong</h4>
-            <p>
-              I made a simple clone of Pong and coded it in TI-Basic for the
-              TI-84 Plus CE calculator.
-            </p>
-          </article>
-
-          <article>
-            <h4>Other</h4>
-            <p>
-              I also program in Python for small projects, and I have experience
-              with Git (both through graphical tools and the command line), the
-              Linux and MacOS shells, and the router software OpenWRT.
-            </p>
-          </article>
+    <div class="scrolling">
+      <main>
+        <section id="about-me">
+          <h2>About Me</h2>
+          <p>
+            Hi, I'm Ethan Bayer. I'm a developer and independent musician
+            interested in technology of all sorts as well as songwriting and
+            music production.
+          </p>
         </section>
 
-        <section>
-          <h3>Music</h3>
+        <section id="portfolio">
+          <h2>Portfolio</h2>
+          <section>
+            <h3>Technology</h3>
 
-          <article>
-            <h4>Castle On The Hill</h4>
-            <p>
-              I covered Ed Sheeran's song "Castle on the Hill" and released it
-              as part of Grey Warren's album
-              <span class="italic">The Songs We Leave Behind</span>. I sang and
-              played guitar for the song, as well as helping produce the song.
-            </p>
-          </article>
+            <article>
+              <h4>Conditional Switch</h4>
+              <p>
+                Conditional Switch is a video game made using the Unity game
+                engine as well as C# for scripting. In total it took me a few
+                months to finish, and you can play it in your browser or
+                download the game for Windows and MacOS.
+              </p>
+            </article>
 
-          <article>
-            <h4>Performance</h4>
+            <article>
+              <h4>Personal Website</h4>
+              <p>
+                I made this website, my personal portfolio, from scratch with
+                <abbr title="HyperText Markup Language">HTML</abbr> and
+                <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
+                over the course of a month thanks to the
+                <a href="https://developer.mozilla.org">MDN Web Docs</a>.
+              </p>
+            </article>
 
-            <p>
-              I have played guitar for over nine years, and I have performed
-              various times.
-            </p>
-          </article>
+            <article>
+              <h4>AutoCompressors</h4>
+              <p>
+                AutoCompressors is a Spigot plugin for the video game Minecraft,
+                adding new functionality in the form of easily customizable
+                items that, when in your inventory, can automatically convert
+                specific items into other ones.
+              </p>
+            </article>
+
+            <article id="ender-3">
+              <h4>Ender-3</h4>
+              <p>
+                Over the course of a few years, I have heavily modified what
+                originally was a Creality Ender-3 3D printer with both
+                modifications developed by the incredible community around this
+                printer as well as some of my own ideas and designs.
+              </p>
+            </article>
+
+            <article>
+              <h4>3D Design</h4>
+              <p>
+                So far, I have designed and published six simple and useful 3D
+                models to solve problems I had. I used Fusion for the designs
+                and 3D printed them on my <a href="#ender-3">Ender-3</a>.
+              </p>
+            </article>
+
+            <article>
+              <h4>Calculator Pong</h4>
+              <p>
+                I made a simple clone of Pong and coded it in TI-Basic for the
+                TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
+              </p>
+            </article>
+
+            <article>
+              <h4>Other</h4>
+              <p>
+                I also program in Python for small projects, and I have
+                experience with Git (both through graphical tools and the
+                command line), the Linux and MacOS shells, and the router
+                software OpenWRT.
+              </p>
+            </article>
+          </section>
+
+          <section>
+            <h3>Music</h3>
+
+            <article>
+              <h4>Castle On The Hill</h4>
+              <p>
+                I covered Ed Sheeran's song "Castle on the Hill" and released it
+                as part of Grey Warren's album
+                <span class="italic">The Songs We Leave Behind</span>. I sang
+                and played guitar for the song, as well as helping produce the
+                song.
+              </p>
+            </article>
+
+            <article>
+              <h4>Performance</h4>
+
+              <p>
+                I have played guitar for over nine years, and I have performed
+                various times.
+              </p>
+            </article>
+          </section>
         </section>
-      </section>
-    </main>
+      </main>
 
-    <footer>
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>
-          <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>
-        </p>
-      </section>
-      <p>Copyright &copy; 2025 Ethan Bayer</p>
-    </footer>
+      <footer>
+        <section id="contact">
+          <h2>Contact</h2>
+          <address>
+            <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>
+          </address>
+        </section>
+        <p>Copyright &copy; 2025 Ethan Bayer</p>
+      </footer>
+    </div>
   </body>
 </html>
