Added sidebar styling
Slightly modified address text
Added font fallbacks

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <h1><a href="">Ethan Bayer</a></h1>
       </header>
 
+      <div class="sidebar-line"></div>
+
       <nav>
         <ul>
           <li><a href="#about-me">About Me</a></li>
@@ -176,7 +178,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <section id="contact">
           <h2>Contact</h2>
           <address>
-            <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>
+            You can contact me at
+            <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>.
           </address>
         </section>
         <p>Copyright &copy; 2025 Ethan Bayer</p>
