Added contact buttons in sidebar
Slightly modified parts of HTML
Added font licensing info to main.css
Added <meta> tag for theme-color property

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="hsl(210, 98%, 16%)" />
 
     <!-- TODO: Add favicon, og:image, theme-color -->
 
@@ -52,138 +53,160 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <h1><a href="">Ethan Bayer</a></h1>
       </header>
 
-      <div class="sidebar-line"></div>
-
       <nav>
         <ul>
           <li><a href="#about-me">About Me</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#technology">Technology</a></li>
+          <li><a href="#music">Music</a></li>
         </ul>
       </nav>
+
+      <div class="socials">
+        <a aria-label="E-mail" href="mailto:studioethanb@gmail.com">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+            <path
+              fill="currentcolor"
+              d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"
+            />
+          </svg>
+        </a>
+
+        <a aria-label="GitHub" href="https://github.com/studioeb">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+            <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+            <path
+              fill="currentColor"
+              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+            />
+          </svg>
+        </a>
+
+        <a
+          aria-label="Spotify"
+          href="https://open.spotify.com/artist/78gALtfse3p14cJF1IYDSS?si=KXynsRuhSpmB95j_Ijwiow"
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+            <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+            <path
+              fill="currentColor"
+              d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
+            />
+          </svg>
+        </a>
+      </div>
     </div>
 
-    <div class="scrolling">
-      <main>
-        <section id="about-me">
-          <h2>About Me</h2>
-          <p>
-            Hi, I'm Ethan Bayer. I'm a developer and independent musician
-            interested in technology of all sorts as well as songwriting and
-            music production.
-          </p>
+    <main>
+      <section id="about-me">
+        <h2>About Me</h2>
+        <p>
+          Hi, I'm Ethan Bayer. I'm a developer and independent musician
+          interested in technology of all sorts as well as songwriting and music
+          production.
+        </p>
+      </section>
+
+      <section>
+        <h2>Portfolio</h2>
+        <section id="technology">
+          <h3>Technology</h3>
+
+          <article>
+            <h4>Conditional Switch</h4>
+            <p>
+              Conditional Switch is a video game made using the Unity game
+              engine as well as C# for scripting. In total it took me a few
+              months to finish, and you can play it in your browser or download
+              the game for Windows and MacOS.
+            </p>
+          </article>
+
+          <article>
+            <h4>Personal Website</h4>
+            <p>
+              I made this website, my personal portfolio, from scratch with
+              <abbr title="HyperText Markup Language">HTML</abbr> and
+              <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
+              over the course of a month thanks to the
+              <a href="https://developer.mozilla.org">MDN Web Docs</a>.
+            </p>
+          </article>
+
+          <article>
+            <h4>AutoCompressors</h4>
+            <p>
+              AutoCompressors is a Spigot plugin for the video game Minecraft,
+              adding new functionality in the form of easily customizable items
+              that, when in your inventory, can automatically convert specific
+              items into other ones.
+            </p>
+          </article>
+
+          <article id="ender-3">
+            <h4>Ender-3</h4>
+            <p>
+              Over the course of a few years, I have heavily modified what
+              originally was a Creality Ender-3 3D printer with both
+              modifications developed by the incredible community around this
+              printer as well as some of my own ideas and designs.
+            </p>
+          </article>
+
+          <article>
+            <h4>3D Design</h4>
+            <p>
+              So far, I have designed and published six simple and useful 3D
+              models to solve problems I had. I used Fusion for the designs and
+              3D printed them on my <a href="#ender-3">Ender-3</a>.
+            </p>
+          </article>
+
+          <article>
+            <h4>Calculator Pong</h4>
+            <p>
+              I made a simple clone of Pong and coded it in TI-Basic for the
+              TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
+            </p>
+          </article>
+
+          <article>
+            <h4>Other</h4>
+            <p>
+              I also program in Python for small projects, and I have experience
+              with Git (both through graphical tools and the command line), the
+              Linux and MacOS shells, and the router software OpenWRT.
+            </p>
+          </article>
         </section>
 
-        <section id="portfolio">
-          <h2>Portfolio</h2>
-          <section>
-            <h3>Technology</h3>
+        <section id="music">
+          <h3>Music</h3>
 
-            <article>
-              <h4>Conditional Switch</h4>
-              <p>
-                Conditional Switch is a video game made using the Unity game
-                engine as well as C# for scripting. In total it took me a few
-                months to finish, and you can play it in your browser or
-                download the game for Windows and MacOS.
-              </p>
-            </article>
+          <article>
+            <h4>Castle On The Hill</h4>
+            <p>
+              I covered Ed Sheeran's song "Castle on the Hill" and released it
+              as part of Grey Warren's album
+              <span class="italic">The Songs We Leave Behind</span>. I sang and
+              played guitar for the song, as well as helping produce the song.
+            </p>
+          </article>
 
-            <article>
-              <h4>Personal Website</h4>
-              <p>
-                I made this website, my personal portfolio, from scratch with
-                <abbr title="HyperText Markup Language">HTML</abbr> and
-                <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
-                over the course of a month thanks to the
-                <a href="https://developer.mozilla.org">MDN Web Docs</a>.
-              </p>
-            </article>
+          <article>
+            <h4>Performance</h4>
 
-            <article>
-              <h4>AutoCompressors</h4>
-              <p>
-                AutoCompressors is a Spigot plugin for the video game Minecraft,
-                adding new functionality in the form of easily customizable
-                items that, when in your inventory, can automatically convert
-                specific items into other ones.
-              </p>
-            </article>
-
-            <article id="ender-3">
-              <h4>Ender-3</h4>
-              <p>
-                Over the course of a few years, I have heavily modified what
-                originally was a Creality Ender-3 3D printer with both
-                modifications developed by the incredible community around this
-                printer as well as some of my own ideas and designs.
-              </p>
-            </article>
-
-            <article>
-              <h4>3D Design</h4>
-              <p>
-                So far, I have designed and published six simple and useful 3D
-                models to solve problems I had. I used Fusion for the designs
-                and 3D printed them on my <a href="#ender-3">Ender-3</a>.
-              </p>
-            </article>
-
-            <article>
-              <h4>Calculator Pong</h4>
-              <p>
-                I made a simple clone of Pong and coded it in TI-Basic for the
-                TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
-              </p>
-            </article>
-
-            <article>
-              <h4>Other</h4>
-              <p>
-                I also program in Python for small projects, and I have
-                experience with Git (both through graphical tools and the
-                command line), the Linux and MacOS shells, and the router
-                software OpenWRT.
-              </p>
-            </article>
-          </section>
-
-          <section>
-            <h3>Music</h3>
-
-            <article>
-              <h4>Castle On The Hill</h4>
-              <p>
-                I covered Ed Sheeran's song "Castle on the Hill" and released it
-                as part of Grey Warren's album
-                <span class="italic">The Songs We Leave Behind</span>. I sang
-                and played guitar for the song, as well as helping produce the
-                song.
-              </p>
-            </article>
-
-            <article>
-              <h4>Performance</h4>
-
-              <p>
-                I have played guitar for over nine years, and I have performed
-                various times.
-              </p>
-            </article>
-          </section>
+            <p>
+              I have played guitar for over nine years, and I have performed
+              various times.
+            </p>
+          </article>
         </section>
-      </main>
+      </section>
+    </main>
 
-      <footer>
-        <section id="contact">
-          <h2>Contact</h2>
-          <address>
-            You can contact me at
-            <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>.
-          </address>
-        </section>
-        <p>Copyright &copy; 2025 Ethan Bayer</p>
-      </footer>
-    </div>
+    <footer>
+      <p class="copyright">Copyright &copy; 2025 Ethan Bayer</p>
+    </footer>
   </body>
 </html>
