Styled main content section
Added more links to music section
Added iframe to song
Added external link icon amd styled links
Changed paragraph spacing and heading sizes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="hsl(210, 98%, 16%)" />
 
-    <!-- TODO: Add favicon, og:image, theme-color -->
+    <!-- TODO: Add favicon, og:image-->
 
     <!-- Open Graph Data -->
     <meta property="og:title" content="Ethan Bayer" />
@@ -40,9 +40,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       property="og:description"
       content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
     />
-    <meta property="og:url" , content="https://studioeb.github.io/" />
-    <meta property="og:type" , content="website" />
-    <meta property="og:locale" , content="en-US" />
+    <meta property="og:url" content="https://studioeb.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en-US" />
 
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -62,7 +62,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       </nav>
 
       <div class="socials">
-        <a aria-label="E-mail" href="mailto:studioethanb@gmail.com">
+        <a
+          target="_blank"
+          rel="noopener"
+          aria-label="E-mail"
+          href="mailto:studioethanb@gmail.com"
+        >
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
             <path
@@ -72,7 +77,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
           </svg>
         </a>
 
-        <a aria-label="GitHub" href="https://github.com/studioeb">
+        <a
+          target="_blank"
+          rel="noopener"
+          aria-label="GitHub"
+          href="https://github.com/studioeb"
+        >
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
             <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
             <path
@@ -83,6 +93,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         </a>
 
         <a
+          target="_blank"
+          rel="noopener"
           aria-label="Spotify"
           href="https://open.spotify.com/artist/78gALtfse3p14cJF1IYDSS?si=KXynsRuhSpmB95j_Ijwiow"
         >
@@ -97,116 +109,149 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       </div>
     </div>
 
-    <main>
-      <section id="about-me">
-        <h2>About Me</h2>
-        <p>
-          Hi, I'm Ethan Bayer. I'm a developer and independent musician
-          interested in technology of all sorts as well as songwriting and music
-          production.
-        </p>
-      </section>
-
-      <section>
-        <h2>Portfolio</h2>
-        <section id="technology">
-          <h3>Technology</h3>
-
-          <article>
-            <h4>Conditional Switch</h4>
-            <p>
-              Conditional Switch is a video game made using the Unity game
-              engine as well as C# for scripting. In total it took me a few
-              months to finish, and you can play it in your browser or download
-              the game for Windows and MacOS.
-            </p>
-          </article>
-
-          <article>
-            <h4>Personal Website</h4>
-            <p>
-              I made this website, my personal portfolio, from scratch with
-              <abbr title="HyperText Markup Language">HTML</abbr> and
-              <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
-              over the course of a month thanks to the
-              <a href="https://developer.mozilla.org">MDN Web Docs</a>.
-            </p>
-          </article>
-
-          <article>
-            <h4>AutoCompressors</h4>
-            <p>
-              AutoCompressors is a Spigot plugin for the video game Minecraft,
-              adding new functionality in the form of easily customizable items
-              that, when in your inventory, can automatically convert specific
-              items into other ones.
-            </p>
-          </article>
-
-          <article id="ender-3">
-            <h4>Ender-3</h4>
-            <p>
-              Over the course of a few years, I have heavily modified what
-              originally was a Creality Ender-3 3D printer with both
-              modifications developed by the incredible community around this
-              printer as well as some of my own ideas and designs.
-            </p>
-          </article>
-
-          <article>
-            <h4>3D Design</h4>
-            <p>
-              So far, I have designed and published six simple and useful 3D
-              models to solve problems I had. I used Fusion for the designs and
-              3D printed them on my <a href="#ender-3">Ender-3</a>.
-            </p>
-          </article>
-
-          <article>
-            <h4>Calculator Pong</h4>
-            <p>
-              I made a simple clone of Pong and coded it in TI-Basic for the
-              TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
-            </p>
-          </article>
-
-          <article>
-            <h4>Other</h4>
-            <p>
-              I also program in Python for small projects, and I have experience
-              with Git (both through graphical tools and the command line), the
-              Linux and MacOS shells, and the router software OpenWRT.
-            </p>
-          </article>
+    <div class="scrolling-content">
+      <main>
+        <section id="about-me">
+          <h2>About Me</h2>
+          <p>
+            Hi, I'm Ethan Bayer. I'm a developer and independent musician
+            interested in technology of all sorts as well as songwriting and
+            music production. Check out my portfolio below!
+          </p>
         </section>
 
-        <section id="music">
-          <h3>Music</h3>
+        <section>
+          <h2>Portfolio</h2>
+          <section id="technology">
+            <h3>Technology</h3>
 
-          <article>
-            <h4>Castle On The Hill</h4>
-            <p>
-              I covered Ed Sheeran's song "Castle on the Hill" and released it
-              as part of Grey Warren's album
-              <span class="italic">The Songs We Leave Behind</span>. I sang and
-              played guitar for the song, as well as helping produce the song.
-            </p>
-          </article>
+            <article>
+              <h4>Conditional Switch</h4>
+              <p>
+                Conditional Switch is a video game made using the Unity game
+                engine as well as C# for scripting. In total it took me a few
+                months to finish, and you can play it in your browser or
+                download the game for Windows and MacOS.
+              </p>
+            </article>
 
-          <article>
-            <h4>Performance</h4>
+            <article>
+              <h4>Personal Website</h4>
+              <p>
+                I made this website, my personal portfolio, from scratch with
+                <abbr title="HyperText Markup Language">HTML</abbr> and
+                <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
+                over the course of a month thanks to the
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://developer.mozilla.org"
+                  >MDN Web Docs</a
+                >.
+              </p>
+            </article>
 
-            <p>
-              I have played guitar for over nine years, and I have performed
-              various times.
-            </p>
-          </article>
+            <article>
+              <h4>AutoCompressors</h4>
+              <p>
+                AutoCompressors is a Spigot plugin for the video game Minecraft,
+                adding new functionality in the form of easily customizable
+                items that, when in your inventory, can automatically convert
+                specific items into other ones.
+              </p>
+            </article>
+
+            <article id="ender-3">
+              <h4>Ender-3</h4>
+              <p>
+                Over the course of a few years, I have heavily modified what
+                originally was a Creality Ender-3 3D printer with both
+                modifications developed by the incredible community around this
+                printer as well as some of my own ideas and designs.
+              </p>
+            </article>
+
+            <article>
+              <h4>3D Design</h4>
+              <p>
+                So far, I have designed and published six simple and useful 3D
+                models to solve problems I had. I used Fusion for the designs
+                and 3D printed them on my <a href="#ender-3">Ender-3</a>.
+              </p>
+            </article>
+
+            <article>
+              <h4>Calculator Pong</h4>
+              <p>
+                I made a simple clone of Pong and coded it in TI-Basic for the
+                TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
+              </p>
+            </article>
+
+            <article>
+              <h4>Other</h4>
+              <p>
+                I also program in Python for small projects, and I have
+                experience with Git (both through graphical tools and the
+                command line), the Linux and MacOS shells, and the router
+                software OpenWRT.
+              </p>
+            </article>
+          </section>
+
+          <section id="music">
+            <h3>Music</h3>
+
+            <article>
+              <h4>Castle On The Hill</h4>
+              <p>
+                I covered
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://www.edsheeran.com"
+                  >Ed Sheeran's</a
+                >
+                song "Castle on the Hill" and released it as part of Grey
+                Warren's album
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://linktr.ee/thesongsweleavebehind"
+                  ><span class="italic">The Songs We Leave Behind</span></a
+                >. I sang and played guitar for the song, as well as helping
+                produce it.
+              </p>
+              <iframe
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/31JWpNe9bWB4ZHVZvNkBZQ?utm_source=generator&theme=0"
+                width="100%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </article>
+
+            <article>
+              <h4>Performance</h4>
+
+              <p>
+                I have played guitar for over nine years, and I have performed
+                various times.
+              </p>
+            </article>
+          </section>
         </section>
-      </section>
-    </main>
+      </main>
 
-    <footer>
-      <p class="copyright">Copyright &copy; 2025 Ethan Bayer</p>
-    </footer>
+      <footer>
+        <p class="copyright">Copyright &copy; 2025 Ethan Bayer</p>
+      </footer>
+    </div>
   </body>
 </html>
