Added buttons to project pages + some default styling

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 months to finish, and you can play it in your browser or
                 download the game for Windows and MacOS.
               </p>
+              <a
+                class="content-button"
+                target="_blank"
+                rel="noopener"
+                href="https://studioeb.itch.io/conditional-switch"
+                >Play the Game</a
+              >
             </article>
 
             <article>
@@ -160,6 +167,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 items that, when in your inventory, can automatically convert
                 specific items into other ones.
               </p>
+              <a
+                class="content-button"
+                target="_blank"
+                rel="noopener"
+                href="https://github.com/studioeb/AutoCompressors"
+                >View the Project</a
+              >
             </article>
 
             <article id="ender-3">
@@ -179,14 +193,28 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 models to solve problems I had. I used Fusion for the designs
                 and 3D printed them on my <a href="#ender-3">Ender-3</a>.
               </p>
+              <a
+                class="content-button"
+                target="_blank"
+                rel="noopener"
+                href="https://www.printables.com/@Soundwave3D_1840657"
+                >View Profile</a
+              >
             </article>
 
             <article>
               <h4>Calculator Pong</h4>
               <p>
-                I made a simple clone of Pong and coded it in TI-Basic for the
-                TI-84 Plus <abbr title="Color Edition">CE</abbr> calculator.
+                I made a simple clone of Pong coded in TI-Basic for the TI-84
+                Plus <abbr title="Color Edition">CE</abbr> calculator.
               </p>
+              <a
+                class="content-button"
+                target="_blank"
+                rel="noopener"
+                href="https://github.com/studioeb/CE-Pong"
+                >View the Project</a
+              >
             </article>
 
             <article>
@@ -195,7 +223,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 I also program in Python for small projects, and I have
                 experience with Git (both through graphical tools and the
                 command line), the Linux and MacOS shells, and the router
-                software OpenWRT.
+                software
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://openwrt.org"
+                  >OpenWRT</a
+                >.
               </p>
             </article>
           </section>
