Added website favicon

--- a/index.html
+++ b/index.html
@@ -32,9 +32,22 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="hsl(210, 98%, 16%)" />
 
-    <!-- TODO: Add favicon, og:image-->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/images/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="/images/favicon/site.webmanifest" />
 
-    <!-- Open Graph Data -->
+    <!-- Open Graph Data TODO: Add og:image -->
     <meta property="og:title" content="Ethan Bayer" />
     <meta
       property="og:description"
