Added OGP/Twitter metadata image + alt text

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       href="/images/favicon/apple-touch-icon.png"
     />
     <link rel="manifest" href="/images/favicon/site.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="Ethan Bayer" />
 
-    <!-- Open Graph Data TODO: Add og:image -->
+    <!-- Open Graph Data -->
     <meta property="og:title" content="Ethan Bayer" />
     <meta
       property="og:description"
@@ -55,7 +56,26 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     />
     <meta property="og:url" content="https://studioeb.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en-US" />
+    <meta property="og:image" content="images/ogp-image.png" />
+    <meta
+      property="og:image:alt"
+      content="Ethan Bayer's logo — containing the words Ethan Bayer: Developer. Musician."
+    />
+
+    <!-- Twitter Data -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="studioeb.github.io" />
+    <meta property="twitter:url" content="https://studioeb.github.io" />
+    <meta name="twitter:title" content="Ethan Bayer" />
+    <meta
+      name="twitter:description"
+      content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
+    />
+    <meta name="twitter:image" content="images/ogp-image.png" />
+    <meta
+      name="twitter:image:alt"
+      content="Ethan Bayer's logo — containing the words Ethan Bayer: Developer. Musician."
+    />
 
     <link rel="stylesheet" href="styles/main.css" />
   </head>
