--- a/index.html
+++ b/index.html
@@ -83,7 +83,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   <body>
     <div class="sidebar">
       <header>
-        <h1><a href="">Ethan Bayer</a></h1>
+        <h1>
+          <a href="">
+            <img
+              src="images/header.svg"
+              alt="Ethan Bayer"
+              width="200px"
+              height="104px"
+            />
+          </a>
+        </h1>
       </header>
 
       <nav>
