Collapse sidebar if width is <768px + split CSS

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     />
 
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
   </head>
 
   <body>
