Added some menu features and fixed some bugs
Still need to make the menu hide when a nav button is pressed
All other listed items from the last commit have been added/fixed

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 <html lang="en-US">
   <head>
-    <title>Ethan Bayer</title>
     <meta charset="utf-8" />
+    <title>Ethan Bayer</title>
     <meta name="author" content="Ethan Bayer" />
     <meta
       name="description"
@@ -80,23 +80,40 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/sidebar.css" />
 
-    <script src="scripts/menu-button.js" defer></script>
+    <script src="scripts/mobile-sidebar.js" defer></script>
   </head>
 
   <body>
     <!-- Mobile Header -->
-    <header id="header-mobile" aria-hidden="true">
+    <header id="header-mobile" aria-hidden="false">
       <button
         onclick="openCloseMenu()"
         type="button"
         id="menu-button"
         aria-label="Menu"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <svg
+          id="menu-icon"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
           <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
           <path
             fill="currentColor"
             d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+        <svg
+          id="x-icon"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 384 512"
+        >
+          <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            fill="currentColor"
+            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
           />
         </svg>
       </button>
@@ -156,8 +173,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     </header>
 
     <!-- Desktop Header -->
-    <div id="sidebar">
-      <header id="header-desktop" aria-hidden="false">
+    <div id="sidebar" aria-hidden="true" inert>
+      <header id="header-desktop" aria-hidden="true" inert>
         <h1>
           <a href="">
             <svg
@@ -440,7 +457,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 produce it.
               </p>
               <iframe
-                style="border-radius: 12px"
+                title="Castle on the Hill by Ethan Bayer on Spotify"
                 src="https://open.spotify.com/embed/track/31JWpNe9bWB4ZHVZvNkBZQ?utm_source=generator&theme=0"
                 width="100%"
                 height="152"
