Menu close on navbar button click

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       </header>
 
       <nav>
-        <ul>
+        <!-- ID only used for JS -->
+        <ul id="nav-list">
           <li><a href="#about-me">About Me</a></li>
           <li><a href="#technology">Technology</a></li>
           <li><a href="#music">Music</a></li>
